fix endpoints and mapping errors
